Glacier checker generally seems to work.